# BoidsCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doctest/: doctest.h
lib/: Boid.hpp  BoidManager.hpp  QTree.hpp  typedefs.hpp
lib/boid/: Boid.hpp  BoidManager.hpp  Vec2.hpp
lib/boid/neighborhood/: IBoidNeighborhoods.hpp  QTreeBoidNeighborhoods.hpp
lib/display/: ASCIIDisplay.hpp  Display.hpp  IDisplay.hpp  SFMLDisplay.hpp
lib/input/: InputParsing.hpp
lib/qtree/: QNode.hpp  QTree.hpp
src/: Boid.cpp  BoidManager.cpp  CMakeLists.txt  QTree.cpp
src/boid/: Boid.cpp  BoidManager.cpp  Vec2.cpp
src/boid/neighborhood/: QTreeBoidNeighborhoods.cpp
src/display/: ASCIIDisplay.cpp  IDisplay.cpp  SFMLDisplay.cpp
src/input/: InputParsing.cpp
src/qtree/: QNode.cpp  QTree.cpp
